<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/andesk"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleMain" />

    <Button
        android:background="@drawable/bluebt"
        style="@style/ButtonText"
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoteButtonLabel" />

    <Button
        android:background="@drawable/bluebt"
        style="@style/ButtonText"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensorLabel" />

    <Button
        android:background="@drawable/bluebt"
        style="@style/ButtonText"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webPageLabel" />

</LinearLayout>