<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/andesk"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleMain" />

<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" >
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" >
    <Button
        android:id="@+id/button2"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bluebt"
        android:text="@string/ChoiceNew" />


    <Button
        android:id="@+id/button3"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bluebt"
        android:text="@string/ChoiseExisting" />
    </LinearLayout>
    </RelativeLayout>

    
</LinearLayout>